--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @book.title %></h1>
+<h2>Average Rating: <%= @book.average_rating %></h2>
 
 <ul class="reviews">
   <%= @book.reviews.find_each do |review| %>
