--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @book.title %></h1>
 <h2>Average Rating: <%= @book.average_rating %></h2>
+<h3>Highest Rating: <%= @book.highest_rating %></h3>
+<h3>Lowest Rating: <%= @book.lowest_rating %></h3>
 
 <ul class="reviews">
   <%= @book.reviews.find_each do |review| %>
